[package]
name = "rustirc"
version = "0.1.0"
authors = ["amit <gamesil456@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3", features = ["io-util", "net", "sync", "rt", "signal", "macros", "rt-multi-thread"] }
async-trait = "0.1.42"
tokio-util = { version = "0.6.0", features = ["codec"] }